erDiagram
    USERS ||--o{ TRANSACTIONS : "1..many"
    USERS ||--o{ FEEDBACKS : "1..many"
    USERS ||--o{ CARDS : "1..many"
    USERS ||--o| DNDSETTINGS : "1..1"
    USERS ||--o{ CALLERTUNES : "1..many"
    USERS ||--o| USERCALLERTUNESETTINGS : "1..1"
    USERS ||--o| CALLERTUNESUBSCRIPTIONS : "1..1"
    DNDSETTINGS ||--o{ DNDNUMBERS : "1..many"
    PRODUCTS ||--o{ TRANSACTIONS : "1..many"
    PRODUCTS ||--o{ FEEDBACKS : "1..many"
    PRODUCTS ||--o{ PRODUCTSALES : "1..many"
    PRODUCTS ||--o{ PHONEDATASUBSCRIPTIONS : "1..many"
    TRANSACTIONS ||--o{ FEEDBACKS : "1..many"
    SALES ||--o{ PRODUCTSALES : "1..many"

    USERS {
        int Id PK
        string Name
        string Email
        string Password
        string Role
        string PhoneNumber
        string NationalId
        string BillingAddress
        bool EmailVerified
        string EmailVerificationTokenHash
        datetime EmailVerificationTokenExpiresAt
        string PasswordResetTokenHash
        datetime PasswordResetTokenExpiresAt
        bool IsActive
        bool IsDeleted
        string LastLockReason
        string LastLockNote
        datetime LastLockedAt
        datetime CreatedAt
    }

    PRODUCTS {
        int Id PK
        string Name
        string Description
        decimal Price
        string Type
        bool IsSpecial
        bool IsTop
    }

    TRANSACTIONS {
        int Id PK
        int UserId FK
        int ProductId FK
        string PhoneNumber
        decimal Amount
        string Type
        string PaymentMethod
        string Status
        datetime DueDate
        bool IsPaid
        string PostpaidNationalId
        string PostpaidBillingAddress
        datetime PostpaidAgreedAt
        datetime PostpaidContractAgreedAt
        string PaymentExternalId
        string PaymentExternalPayerId
        datetime CreatedAt
    }

    FEEDBACKS {
        int Id PK
        string Category
        string Name
        string Email
        string Message
        string AdminReply
        datetime AdminRepliedAt
        int UserId FK
        int ProductId FK
        int TransactionId FK
        datetime CreatedAt
        datetime UpdatedAt
    }

    CARDS {
        int Id PK
        int UserId FK
        string CardNumber
        string CVV
        decimal Balance
        decimal Price
        datetime ExpiryDate
    }

    DNDSETTINGS {
        int Id PK
        int UserId FK
        bool IsEnabled
        string Mode
    }

    DNDNUMBERS {
        int Id PK
        int DndSettingId FK
        string PhoneNumber
    }

    CALLERTUNES {
        int Id PK
        int UserId FK
        string FilePath
        bool IsActive
        datetime CreatedAt
    }

    USERCALLERTUNESETTINGS {
        int Id PK
        int UserId FK
        int CallerTuneId FK
        bool IsEnabled
    }

    CALLERTUNESUBSCRIPTIONS {
        int Id PK
        int UserId FK
        datetime ActivatedAt
        datetime ExpiresAt
        datetime CreatedAt
        datetime UpdatedAt
    }

    SALES {
        int Id PK
        string Name
        string SaleType
        decimal SaleValue
        datetime StartAt
        datetime EndAt
        bool IsEnabled
        datetime CreatedAt
    }

    PRODUCTSALES {
        int Id PK
        int ProductId FK
        int SaleId FK
        string SaleType
        decimal SaleValue
        datetime StartAt
        datetime EndAt
        datetime CreatedAt
    }

    PHONEDATASUBSCRIPTIONS {
        int Id PK
        string PhoneNumber
        int ProductId FK
        datetime ActivatedAt
        datetime ExpiresAt
        datetime CreatedAt
        datetime UpdatedAt
    }
